<resources>
    <string name="app_name">GeoLocation</string>
    <string name="permission_title">Требуется разрешение</string>
    <string name="permission_request">Чтобы определить ваше местоположение мы должны получить специальное разрешение.\nХотите перейти в настройки?</string>
    <string name="common_yes">Да</string>
    <string name="common_no">Нет</string>
    <string name="add_route">Добавить маршрут</string>
    <string name="route_start">Начало: %s</string>
    <string name="route_end">Конец: %s</string>
    <string name="route_name">Имя путешествия</string>
    <string name="find_route">Создать путешествие</string>
    <string name="drawer_open">Открыто</string>
    <string name="drawer_close">Закрыто</string>
    <string name="travels_list">Список путешествий</string>
    <string name="not_linked_markers_list">Список несвязных меток</string>
    <string name="search_closest_travel">Поиск ближайшего путешествия</string>
    <string name="travel_route">%1$s\n%2$s</string>
    <string name="marker_location">%1$.5f %2$.5f</string>
    <string name="add_photo">Добавить фото</string>
    <string name="search_travel">Найти ближайшие путешествия</string>
</resources>
